--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@ image: gcc
 build:
     stage: build
     before_script:
-        - apt update && apt -y install cmake libgomp1
+        - apt update && apt -y install cmake libgomp1 libgmp-dev
     script:
         - cd build/
         - cmake -DCMAKE_BUILD_TYPE=Release ..
