Cache the right .o files.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,4 +17,4 @@ build:
     # Cache .o files for faster compiling
     cache:
         paths:
-            - "*.o"
+            - "build/CMakeFiles/indivisible.dir/src/*.o"
