Fresh new start.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,7 @@ project(Indivisible)
 set(TARGET_NAME indivisible)
 
 if(NOT CMAKE_BUILD_TYPE)
-	set(CMAKE_BUILD_TYPE "debug")
+	set(CMAKE_BUILD_TYPE "release")
 endif()
 string(TOLOWER ${CMAKE_BUILD_TYPE} CMAKE_BUILD_TYPE)
 message(STATUS "Build type: ${CMAKE_BUILD_TYPE}")
@@ -30,18 +30,15 @@ set(CMAKE_MODULE_PATH
 	${CMAKE_SOURCE_DIR}/cmake/)
 
 find_package(GMP REQUIRED)
-find_package(OpenMP REQUIRED)
 
 include_directories(
 	${GMP_INCLUDE_DIR})
 
 set(SRCS
-	src/main.c
-	src/files.c
-	src/list.c)
+	src/main.c)
 
 # Define the C flags.
-set(CMAKE_C_FLAGS "-std=gnu99 ${OpenMP_C_FLAGS} -Wall -Wextra -Werror -Wfatal-errors -Wmissing-declarations -pedantic-errors")
+set(CMAKE_C_FLAGS "-std=gnu99 -Wall -Wextra -Werror -Wfatal-errors -Wmissing-declarations -pedantic-errors")
 set(CMAKE_C_FLAGS_DEBUG "-g -O0")
 set(CMAKE_C_FLAGS_RELEASE "-O3")
 set(CMAKE_C_FLAGS_RELWITHDEBINFO "-g -O3")
@@ -49,6 +46,8 @@ set(CMAKE_C_FLAGS_MINSIZEREL "-Os")
 
 if(NOT CMAKE_BUILD_TYPE MATCHES "debug" AND NOT CMAKE_BUILD_TYPE MATCHES "relwithdebinfo")
 	add_definitions("-DNDEBUG")
+else()
+	add_definitions("-DDEBUG")
 endif()
 
 add_executable(${TARGET_NAME} ${SRCS})
